<resources>
    <!-- Strings related to main_menu -->
    <string name="app_name">fakeInsta</string>
    <string name="do.comment">نظر دهید ...</string>
    <string name="account">حساب کاربری</string>
    <string name="add_post">اشتراک پست</string>
    <string name="login">ورود به حساب</string>
    <string name="logout">خروج از حساب</string>
    <!-- Strings related to login -->
    <string name="prompt_email">ایمیل</string>
    <string name="prompt_password">پسورد</string>
    <string name="action_sign_in">ورود</string>
    <string name="send">ارسال</string>
    <!-- Strings related to add_post -->
    <string name="select_image">انتخاب تصویر</string>
    <string name="enter_description">عنوان پست</string>
    <string name="description_text">توضیحات ...</string>
    <string name="select_image_description">selected image</string>
</resources>