<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text.padding"
            android:text="@string/enter_description" />

        <EditText
            android:id="@+id/description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_text"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:labelFor="@id/description"
            android:lines="4"
            android:scrollbars="vertical" />

        <ImageView
            android:id="@+id/selected_image"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:contentDescription="@string/select_image_description"
            android:scaleType="centerCrop" />

        <Button
            android:id="@+id/select_image_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_image" />

        <Button
            android:id="@+id/send_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send" />
    </LinearLayout>

</ScrollView>