<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="#ffBE80FF"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/textView2"
            android:textSize="30sp"
            android:textColor="#ffffffff" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center_vertical|center_horizontal">
        <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:visibility="gone" />
        <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="vertical">

                <AutoCompleteTextView android:id="@+id/email_auto_complete_text" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="#ffffffff"
                    android:textColor="#ffffffff" />

                <EditText android:id="@+id/password_edit_text" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_password"
                    android:gravity="end"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="#ffffffff"
                    android:textColor="#ffffffff" />

                <Button android:id="@+id/sign_in_button" style="?android:textAppearanceSmall"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" android:text="@string/action_sign_in"
                    android:textStyle="bold"
                    android:textColor="#ffffffff"
                    android:background="#ff7e51c2" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>
